[refs #116727] Fix layout - wrong extra space in right side and issues with search box and personal meun.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/mobile-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/mobile-app.css
@@ -9,10 +9,6 @@
   {
     font-size: 16pt !important;
   }
-  body #header-section .container-fluid#insitu-brand-utils .content .utils {
-    margin-left: -24px;
-    margin-right: -24px;
-  }
   body #header-section .container-fluid#insitu-brand-utils .content .utils .list-inline.insitu-list-separated {
     overflow: hidden !important;
   }
